[package]
name = "staged-sg-filter"
version = "0.1.0"
edition = "2021"
licence = "MIT"
description = "A staged programming implementation for Savitzky-Golay filters. Loops go brrr."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.10.0", optional = true }
divan = "0.1.0"


[[bench]]
name = "divan"
harness = false

[features]
