[package]
name = "staged-sg-filter"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "A staged programming implementation for Savitzky-Golay filters. Loops go brrr."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "divan"
harness = false

[features]
